--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>Glowing Social Icons</title>
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
    </head>
    <body>
       <ul>
